Continue trying to get sudo working like it should be. change some verbiage in about me, fix issue with black background not extending past bottom of window if enough is done to add the scrollbar.

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,8 @@
 
 .top {
   font-family: monospace;
-  font-size: ;
+  position: fixed;
+  overflow-y: auto;
   background-color: black;
   width: 100vw;
   height: 100vh;
